feat(profile): user profile edition (US3) (#177)
